Update index.html, fix bugs

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -14,7 +14,7 @@ limitations under the License.
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
   <meta charset="UTF-8">
   <title>Wordcraft</title>
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined&display=block" rel="stylesheet">
@@ -25,10 +25,11 @@ limitations under the License.
 
   <!-- Add any global styles for body, document, etc. -->
   <link rel="stylesheet" href="global.css">
+  <%= htmlWebpackPlugin.tags.headTags %>
 </head>
 
 <body>
-  <%= htmlWebpackPlugin.tags.headTags %>
+  <!-- Your body content goes here -->
 </body>
 
 </html>
